[package]
name = "websocket-transport"
version = "0.1.0"
authors = ["Semyon Ivanov <semyon95@gmail.com>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio-core"
description = """
High-level transport for rust-websocket
"""

[dependencies]
futures = "^0.1.15"
websocket = { git = "https://github.com/semyon2105/rust-websocket" }
